# image-zoom-quiz

./: .gitignore  Pipfile  application.py  config.py  image_db.sqlite3  models.py  pyproject.toml  requirements.txt  specify_center.html
static/css/: style.css
static/js/: center_point.js  image_zoom.js
templates/: file_upload.html  index.html  notify.html  specify_center.html  start.html  success.html  test.html  zoom.html
