[tool.poetry]
name = "image_zoom_test"
version = "0.1.0"
description = ""
authors = ["Hajime Murao <2620990+hjmr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
awsebcli = "*"
pillow = "*"
flask-sqlalchemy = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
