[project]
name = "image-zoom-test"
version = "0.1.0"
description = ""
authors = [
    {name = "hjmr",email = "2620990+hjmr@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
awsebcli = "^3.26"
flask-sqlalchemy = "^3.1.1"
pillow = "^12.1.1"
